fixed video design issue on mobile

--- a/public/assets/css/video.less
+++ b/public/assets/css/video.less
@@ -381,8 +381,8 @@
       border: 5px solid green;
       border-radius: 6px;
       right: 12px;
-      width: 122px;
-      height: 69px;
+      width: 23%;
+      height: 24vh;
     }
     video {
      width: 100%;
